Fixed the gap between cards, now one has to be 100% visible.

--- a/components/Card.module.scss
+++ b/components/Card.module.scss
@@ -3,7 +3,6 @@
 .cards {
 	display: flex;
 	flex-direction: column;
-	gap: 4rem;
 }
 
 .card {
@@ -12,6 +11,7 @@
 	grid-gap: 1rem;
 	position: relative;
 	cursor: pointer;
+	padding: 1.5rem 0;
 }
 
 .background {
@@ -19,8 +19,8 @@
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	width: calc(100% + 2.5rem);
-	height: calc(100% + 2rem);
+	width: calc(100% + 3rem);
+	height: 100%;
 	z-index: -1;
 	// Glassmorphism effect
 	background: rgba(255, 255, 255, 0.1);
@@ -124,10 +124,6 @@
 }
 
 @media screen and (max-width: 768px) {
-	.cards {
-		gap: 3rem;
-	}
-
 	.card {
 		display: flex;
 		flex-direction: column;
