--- a/components/Content.module.scss
+++ b/components/Content.module.scss
@@ -10,7 +10,7 @@
 .section {
 	display: flex;
 	flex-direction: column;
-	gap: 3rem;
+	gap: 1.5rem;
 
 	h2 {
 		margin-bottom: 3rem;
